[metadata]
name = auditlog-geosony
version = 0.0.1
author = Sony George
author_email = geosony@gmail.com
description = Audit log python sdk to write app log to aws kinesis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geosony/auditlog-py-sdk.git
project_urls =
    Bug Tracker = https://github.com/geosony/auditlog-py-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.3

[options.packages.find]
where = src